SQLTypeMapping -> SqlTypeMapping UUIDCoercer -> UuidCoercer Fix error in Table after getting rid of built-in PreparedStatement Java 9 upgrades   beanClass.newInstance() -> beanClass.getDeclaredConstructor().newInstance()   remove unneeded finalize